2022-06-20  Alex Kotov  <kotovalexarian@gmail.com>

	* include/kernaux/alloc.h: Finished
	* include/kernaux/generic/mutex.h: Mutex moved here
	* include/kernaux/macro.h: Definitions "KERNAUX_ACCESS_*" made stable
	* include/kernaux/macro.h: Macro "KERNAUX_PROTECTED_FIELD" added

2022-06-18  Alex Kotov  <kotovalexarian@gmail.com>

	* include/kernaux/mutex.h: Added

2022-06-17  Alex Kotov  <kotovalexarian@gmail.com>

	* configure.ac: Added package "alloc"
	* include/kernaux/alloc.h: Added

2022-06-16  Alex Kotov  <kotovalexarian@gmail.com>

	libkernaux 0.4.0 released