@@ -6,6 +6,7 @@ extern "C" {
 #endif
 
 #include <kernaux/macro.h>
+#include <kernaux/generic/malloc.h>
 #include <kernaux/generic/mutex.h>
 
 #include <stddef.h>
@@ -18,6 +19,7 @@ typedef struct KernAux_Alloc_Node {
 } *KernAux_Alloc_Node;
 
 typedef struct KernAux_Alloc {
+    struct KernAux_Malloc malloc;
     KernAux_Mutex KERNAUX_PRIVATE_FIELD(mutex);
     KernAux_Alloc_Node KERNAUX_PRIVATE_FIELD(head);
 } *KernAux_Alloc;
@@ -26,9 +28,6 @@ struct KernAux_Alloc KernAux_Alloc_create(KernAux_Mutex mutex);
 void KernAux_Alloc_init(KernAux_Alloc alloc, KernAux_Mutex mutex);
 
 void KernAux_Alloc_add_zone(KernAux_Alloc alloc, void *ptr, size_t size);
-
-void *KernAux_Alloc_malloc(KernAux_Alloc alloc, size_t size);
-void  KernAux_Alloc_free  (KernAux_Alloc alloc, void *ptr);
 
 #ifdef __cplusplus
 }
